added further functions to windows version, removed hard coded function selection with automatically generated code

--- a/config.cfg
+++ b/config.cfg
@@ -43,30 +43,35 @@ template= avx512
 feature_req= avx512
 fallback= func_knl_xeonphi_avx512_4t
 flags = -mavx512f
+win64_incl = 1
 
 [ISA_FMA4]
 template= fma4
 feature_req= fma4
 fallback= func_bld_opteron_fma4_1t
 flags= -mavx, -mfma4
+win64_incl = 1
 
 [ISA_FMA]
 template= fma
 feature_req= fma
 fallback= func_hsw_corei_fma_1t, func_hsw_corei_fma_2t 
 flags= -mavx, -mfma
+win64_incl = 1
 
 [ISA_AVX]
 template= avx
 feature_req= avx
 fallback= func_snb_corei_avx_1t, func_snb_corei_avx_2t
 flags = -mavx
+win64_incl = 1
 
 [ISA_SSE2]
 template= sse2
 feature_req= sse2
 fallback= func_nhm_corei_sse2_1t, func_nhm_corei_sse2_2t
 flags = -msse2
+win64_incl = 1
 
 ###############################################################################
 # supported processors
