enabled Windows support by default, added information about compiler requirements, changed version number to 1.6 (BETA)

--- a/config.cfg
+++ b/config.cfg
@@ -29,13 +29,13 @@
 
 [VERSION]
 major=1
-minor=5
+minor=6
 # additional information, e.g., "BETA"
-info=""
+info="BETA"
 
 # optional features
 enable_cuda=1
-enable_win64=0
+enable_win64=1
 enable_mac=0
 
 [ISA_AVX512]
