Adds missing CUDA for gcc6 config

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ matrix:
           packages:
             - gcc-6
             - g++-6
+            - nvidia-cuda-dev
           sources: *sources
 before_script:
   - mkdir -p build
