--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,6 +32,8 @@ before_build:
 
     python ../code-generator.py --enable-win
 
+    copy c:\MinGW\bin\mingw32-make.exe c:\MinGW\bin\make.exe
+
 build_script:
 - cmd: >-
     make all
