derp, helper method rename

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,4 @@
 image:
-  - Visual Studio 2015
   - Visual Studio 2017
 
 platform:
@@ -34,4 +33,4 @@ before_build:
 
 build_script:
 - cmd: >-
-    c:\MinGW\bin\mingw32-make.exe win64
+    WIN64_CC=c:\MinGW\binx86_64-w64-mingw32-gcc.exe c:\MinGW\bin\mingw32-make.exe win64
