Set new version

--- a/config.cfg
+++ b/config.cfg
@@ -29,9 +29,9 @@
 
 [VERSION]
 major=1
-minor=6
+minor=7
 # additional information, e.g., "BETA"
-info=""
+info="2 (github)"
 
 # optional features
 enable_cuda=1
