Added support for AMD EPYC

--- a/config.cfg
+++ b/config.cfg
@@ -59,6 +59,13 @@ fallback= func_hsw_corei_fma_1t, func_hsw_corei_fma_2t
 flags= -mavx, -mfma
 win64_incl = 1
 
+[ISA_ZEN_FMA]
+template= zen_fma
+feature_req= fma
+fallback= func_hsw_corei_fma_1t, func_hsw_corei_fma_2t 
+flags= -mavx, -mfma
+win64_incl = 1
+
 [ISA_AVX]
 template= avx
 feature_req= avx
@@ -225,3 +232,15 @@ buffer_sizes=   16384,1048576,786432,104857600
 lines=          1536
 instr_groups=   RAM_L,L3_L,L2_LS,L1_L,REG
 proportion=     1,1,5,90,45
+
+[Zen]
+arch=           zen
+model=          epyc
+threads=        1,2
+isa=            zen_fma
+buffer_sizes=   65536,524288,2097152,104857600
+cpu_family=     23
+cpu_model=      1
+lines=          1536
+instr_groups=   RAM_L,L3_LS,L2_LS,L1_LS,REG
+proportion=     1,3,10,15,90
