--- a/config.cfg
+++ b/config.cfg
@@ -242,5 +242,5 @@ buffer_sizes=   65536,524288,2097152,104857600
 cpu_family=     23
 cpu_model=      1
 lines=          1536
-instr_groups=   RAM_L,L3_LS,L2_LS,L1_LS,REG
-proportion=     1,3,10,15,90
+instr_groups=   RAM_L,L3_L,L2_L,L1_LS,REG
+proportion=     9,52,100,87,82
