--- a/config.cfg
+++ b/config.cfg
@@ -31,7 +31,7 @@
 major=1
 minor=7
 # additional information, e.g., "BETA"
-info="3 (github)"
+info="4 (github)"
 
 # optional features
 enable_cuda=1
@@ -233,7 +233,7 @@ lines=          1536
 instr_groups=   RAM_L,L3_L,L2_LS,L1_L,REG
 proportion=     1,1,5,90,45
 
-[Zen]
+[Naples]
 arch=           zen
 model=          epyc
 threads=        1,2
