added more Zen and Zen+ Processor Settings

--- a/config.cfg
+++ b/config.cfg
@@ -233,6 +233,7 @@ lines=          1536
 instr_groups=   RAM_L,L3_L,L2_LS,L1_L,REG
 proportion=     1,1,5,90,45
 
+# Naples, Whitenhave, Summit Ridge, Snowy Owl, Raven Ridge, Pinnacle Ridge, Picasso
 [Naples]
 arch=           zen
 model=          epyc
@@ -240,7 +241,7 @@ threads=        1,2
 isa=            zen_fma
 buffer_sizes=   65536,524288,2097152,104857600
 cpu_family=     23
-cpu_model=      1
+cpu_model=      1,8,17,24
 lines=          1536
 instr_groups=   RAM_L,L3_L,L2_L,L1_LS,REG
 proportion=     8,33,81,79,100
