detect cpu frequency and move code to firestarter class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(firestarter firestarter/main.cpp)
+add_executable(firestarter firestarter/main.cpp firestarter/firestarter.cpp firestarter/clockrate.cpp firestarter/x86.c)
 
 target_link_libraries(firestarter LLVMSupport)
