added prototype code for pthreads

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,12 @@
-add_executable(firestarter firestarter/main.cpp firestarter/firestarter.cpp firestarter/cpuClockrate.cpp firestarter/x86.c firestarter/threadWorker.cpp)
+add_executable(FIRESTARTER
+	firestarter/Main.cpp
+	firestarter/Firestarter.cpp
+	firestarter/CpuClockrate.cpp
+	firestarter/ThreadWorker.cpp
+	firestarter/Compat/x86.c
+)
 
-target_link_libraries(firestarter
+target_link_libraries(FIRESTARTER
 	LLVMSupport
 	hwloc
 )
