move functions of Firestarter class to seperate files, add CPU Affinity parsing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,8 @@ add_executable(FIRESTARTER
 	firestarter/Main.cpp
 	firestarter/Firestarter.cpp
 	firestarter/CpuClockrate.cpp
+	firestarter/CpuAffinity.cpp
+	firestarter/Environment.cpp
 	firestarter/ThreadWorker.cpp
 	firestarter/Compat/x86.c
 )
