added default payload settings, cache and ram buffer sizes, fixed pthread linker error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,8 @@ include_directories(include)
 include_directories(lib/nitro/include)
 include_directories(lib/cxxopts/include)
 
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
 find_package(LLVM REQUIRED CONFIG)
 include(FindPkgConfig)
 pkg_check_modules(HWLOC REQUIRED hwloc>=2.0)
