--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,8 +9,7 @@ add_executable(FIRESTARTER
 	# here starts the x86 specific code
 	firestarter/Environment/X86/Functions.cpp
 	firestarter/Environment/X86/CpuClockrate.cpp
-
-	firestarter/Environment/X86/Compat/x86.c
+	firestarter/Environment/X86/Timestamp.cpp
 
 	firestarter/Environment/X86/Payload/X86Payload.cpp
 	firestarter/Environment/X86/Payload/AVX512Payload.cpp
