added watchdog for dynamic load selectiion during runtime. fixed fma payloads return based on load-variable.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(FIRESTARTER
 	firestarter/Main.cpp
 	firestarter/ThreadWorker.cpp
+	firestarter/WatchdogWorker.cpp
 
 	firestarter/Environment/CpuClockrate.cpp
 	firestarter/Environment/CpuAffinity.cpp
