--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,9 +45,9 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
 include(cmake/InstallLLVM.cmake)
-#include(cmake/InstallHwloc.cmake)
+include(cmake/InstallHwloc.cmake)
 
-include(FindPkgConfig)
-pkg_check_modules(HWLOC REQUIRED hwloc>=2.0)
+#include(FindPkgConfig)
+#pkg_check_modules(HWLOC REQUIRED hwloc>=2.0)
 
 add_subdirectory(src)
