build travis for mac

--- a/.travis.yml
+++ b/.travis.yml
@@ -120,16 +120,22 @@ matrix:
         - CC="clang-11"
         - CXX="clang++-11"
       compiler: clang
-
-env:
-  global:
-    - CMAKE_EXE_LINKER_FLAGS="-static"
-    - CMAKE_CXX_FLAGS="-DAFFINITY"
+    - os: osx
+      osx_image: xcode9.2
+    - os: osx
+      osx_image: xcode10.1
+    - os: osx
+      osx_image: xcode11.3
+    - os: osx
+      osx_image: xcode12u
 
 install:
-  - source travis-ci/install-cmake-3-13.sh
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then source travis-ci/install-cmake-3-13.sh; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install cmake; fi
 
 before_script:
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export CMAKE_EXE_LINKER_FLAGS="-static" && export CMAKE_CXX_FLAGS="-DAFFINITY"; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export CMAKE_CXX_FLAGS="-DAFFINITY"; fi
   - mkdir build
   - cd build
   - cmake ..
