--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,13 @@ target_link_libraries(FIRESTARTER
 	AsmJit::AsmJit
 	)
 
+if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+else()
+	target_link_libraries(FIRESTARTER
+		tinfo
+		)
+endif()
+
 if(NOT DEFINED NIX_BUILD)
 	add_dependencies(FIRESTARTER
 		HwlocInstall
