added hwloc and llvm libraries for windows. use _mm_malloc. update nitro. get processor-name for win32.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,7 +29,7 @@ target_link_libraries(FIRESTARTER
 	AsmJit::AsmJit
 	)
 
-if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+if(CMAKE_SYSTEM_NAME STREQUAL "Darwin" OR CMAKE_SYSTEM_NAME STREQUAL "Windows")
 else()
 	target_link_libraries(FIRESTARTER
 		tinfo
