added windows build to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ git:
 
 matrix:
   include:
+    - os: windows
     - os: linux
       arch: amd64
       addons:
@@ -126,14 +127,36 @@ matrix:
       osx_image: xcode12
 
 install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then source travis-ci/install-cmake-3-13.sh; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew upgrade cmake; fi
+  - |-
+      case $TRAVIS_OS_NAME in
+        linux)
+          source travis-ci/install-cmake-3-13.sh
+          ;;
+        osx)
+          brew upgrade cmake
+          ;;
+        windows)
+          choco install mingw cmake
+          ;;
+      esac
 
 before_script:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export CMAKE_CXX_FLAGS="-DAFFINITY"; fi
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake --version
+  - |-
+      case $TRAVIS_OS_NAME in
+        linux)
+          export CMAKE_CXX_FLAGS="-DAFFINITY"
+          cmake ..
+          ;;
+        osx)
+          cmake ..
+          ;;
+        windows)
+          cmake -G "MinGW Makefiles" ..
+          ;;
+      esac
 
 script:
-  - make -j2
+  - cmake --build . -j 2
