add code for dumping simd register content. restructure threads. fix bug in AVX and SSE2 payloads, added in v1.6

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,8 @@
 SET(FIRESTARTER_FILES
 	firestarter/Main.cpp
-	firestarter/ThreadWorker.cpp
+	firestarter/LoadWorker.cpp
 	firestarter/WatchdogWorker.cpp
+	firestarter/DumpRegisterWorker.cpp
 
 	firestarter/Environment/CpuClockrate.cpp
 	firestarter/Environment/CpuAffinity.cpp
